check for jackpot

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button id="minBet" class="betBtn "> &nbsp Min Bet &nbsp </button>
         <button id="maxBet" class='betBtn '> &nbsp Max Bet &nbsp </button>
     </div>
-    <span>Score: <p id='score'>1000</p></span>
+    <span>Score: <p id='score'></p></span>
     <button id="spinBtn">Spin</button>
     <script src='js/main.js'></script>
 </body>
